(style): fix background behaviour on mobile devices

--- a/src/templates/offer-item.module.scss
+++ b/src/templates/offer-item.module.scss
@@ -10,6 +10,7 @@
 
   @media (max-width: $medium-screen-breakpoint) {
     height: 65vh;
+    background-attachment: unset;
   }
 }
 
